
    HADOOP-12296. when setnetgrent returns 0 in linux, exception should be
    thrown (Chang Li via jlowe)

    HADOOP-12545. Hadoop javadoc has broken links for AccessControlList,
    ImpersonationProvider, DefaultImpersonationProvider, and DistCp.
    (Arshad Mohammad via aajisaka)

    HADOOP-12588. Fix intermittent test failure of TestGangliaMetrics.
    (Masatake Iwasaki via aajisaka)

Release 2.7.2 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HADOOP-12232. Upgrade Tomcat dependency to 6.0.44. (cnauroth)

  OPTIMIZATIONS

  BUG FIXES

    HADOOP-12304. Applications using FileContext fail with the default file
    system configured to be wasb/s3/etc. (cnauroth)

    HADOOP-11932. MetricsSinkAdapter may hang  when being stopped.
    (Brahma Reddy Battula via jianhe)

    HADOOP-12213. Interrupted exception can occur when Client#stop is called.
    (Kuhu Shukla via ozawa)

    HADOOP-12191. Bzip2Factory is not thread safe. (Brahma Reddy Battula
    via ozawa)

    HADOOP-12464. Interrupted client may try to fail-over and retry (kihwal)

    HADOOP-12359. hadoop fs -getmerge doc is wrong.
    (Jagadesh Kiran N via aajisaka)

    HADOOP-12230. hadoop-project declares duplicate, conflicting curator
    dependencies. (Rakesh R via aajisaka)

    HADOOP-12465. Incorrect javadoc in WritableUtils.java.
    (Jagadesh Kiran N via aajisaka)

Release 2.7.1 - 2015-07-06 

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HADOOP-12103. Small refactoring of DelegationTokenAuthenticationFilter to
    allow code sharing. (Yongjun Zhang)

  OPTIMIZATIONS

    HADOOP-11812. Implement listLocatedStatus for ViewFileSystem to speed up
    split calculation (gera)

  BUG FIXES

    HADOOP-11868. Invalid user logins trigger large backtraces in server log
    (Chang Li via jlowe)

    HADOOP-11872. "hadoop dfs" command prints message about using "yarn jar" on
    Windows(branch-2 only) (Varun Vasudev via cnauroth)
